fix: Fix footer overlapping content by adjusting margins and paddings

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,11 @@ h2{
     font-size: 130%;
 }
 
+main {
+    padding-bottom: 10%;
+
+}
+
 .main-bg {
     background-color: #F9FAFC;
 }
@@ -92,7 +97,6 @@ h2{
 .copyright{
     font-size: 80%;
 }
-
 
 /*-- about page --*/
 
@@ -225,6 +229,11 @@ h2{
     .hero-text {
         padding: 10px;
     }
+    main {
+        padding-bottom: 40%;
+    
+    }
+    
 
   }
   
